syntax = "proto3";

// Package name
package users;

// Define the gRPC service
service UserService {
  // Get all users
  rpc GetAllUsers (GetAllUsersRequest) returns (UserList);
}

// Message for a request with token
message GetAllUsersRequest {
  string token = 1;  // Add token to the request
}

// Message for a user
message User {
  string id = 1;
  string name = 2;
  string email = 3;
}

// Message for a list of users
message UserList {
  repeated User users = 1;
}
